--- a/Autocad_exel_read_and_to create_lisp.csproj
+++ b/Autocad_exel_read_and_to create_lisp.csproj
@@ -12,7 +12,7 @@
     <PackageReference Include="Aspose.Cells" Version="23.2.0" />
     <PackageReference Include="ExcelDataReader" Version="3.6.0" />
     <PackageReference Include="ExcelDataReader.DataSet" Version="3.6.0" />
-    <PackageReference Include="MacroView.VSTO.Excel" Version="4.0.0" />
+    <PackageReference Include="Microsoft.Office.Interop.Excel" Version="15.0.4795.1001" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="7.0.0" />
   </ItemGroup>
 
